OBJ import: new importer doesn't use //relative/image/paths #100076

Closed
opened 2022-07-30 02:45:28 +02:00 by Scurest · 7 comments
Contributor

System Information
Operating system: Linux
Graphics card:

Blender Version
Broken: blender-3.3.0-alpha+master.8f543a73abc4 (from July 12th)

Short description of error
When the .blend is saved and the "Default To Relative Paths" preference is on (the default), the old OBJ importer would use //relative/paths/for/images. The new importer always uses absolute paths AFAICT.

This was previously reported as #34864 for the old importer and fixed.

Some relevant code from the Python importer

Exact steps for others to reproduce the error
Create new file, save it, import a .obj with an image, and examine the image paths in the sidebar of the Image Editor.
Old vs new.
PathCompare.png

**System Information** Operating system: Linux Graphics card: **Blender Version** Broken: blender-3.3.0-alpha+master.8f543a73abc4 (from July 12th) **Short description of error** When the .blend is saved and the "Default To Relative Paths" preference is on (the default), the old OBJ importer would use //relative/paths/for/images. The new importer always uses absolute paths AFAICT. This was previously reported as #34864 for the old importer and fixed. [Some relevant code from the Python importer](https://github.com/blender/blender-addons/blob/c60fef38175ad989ee0c45e924cb27e1417c8667/io_scene_obj/__init__.py#L147-L149) **Exact steps for others to reproduce the error** Create new file, save it, import a .obj with an image, and examine the image paths in the sidebar of the Image Editor. Old vs new. ![PathCompare.png](https://archive.blender.org/developer/F13326059/PathCompare.png)
Author
Contributor

Added subscriber: @scurest

Added subscriber: @scurest
Aras Pranckevicius self-assigned this 2022-07-30 06:54:37 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

@scurest while I can see the code in the old Python importer that tries to use relative paths, I can't make it actually use them on my machine. I'm testing with Blender 3.2.1 here, and the Python based importer always ends up creating images with absolute paths, even if my user preference says "relative paths". Any ideas what I'm testing wrong?

@scurest while I can see the code in the old Python importer that tries to use relative paths, I can't make it actually use them on my machine. I'm testing with Blender 3.2.1 here, and the Python based importer always ends up creating images with absolute paths, even if my user preference says "relative paths". Any ideas what I'm testing wrong?
Author
Contributor

Hm, after being set here the relpath eventually gets used here. So it looks like it happens when

  1. the "Default to Relative Paths" preference is on
  2. the .blend has been saved to a file
  3. the relative path exists (eg. not between C:\a.blend and D:\b.png on Windows)

You got all those?

Hm, after being set [here](https:*github.com/blender/blender-addons/blob/c60fef38175ad989ee0c45e924cb27e1417c8667/io_scene_obj/__init__.py#L147-L149) the relpath eventually gets used [here](https:*github.com/blender/blender/blob/003dfae270781bfa642a2c5804fa190edd4dfca4/release/scripts/modules/bpy_extras/image_utils.py#L107-L118). So it looks like it happens when 1. the "Default to Relative Paths" preference is on 2. the .blend has been saved to a file 3. the relative path exists (eg. not between C:\a.blend and D:\b.png on Windows) You got all those?

Ah! The "blend file has to be saved" is the step I was missing, silly me. Move on, nothing to see here! Will fix asap.

Ah! The "blend file has to be saved" is the step I was missing, silly me. Move on, nothing to see here! Will fix asap.

This issue was referenced by e2be6bc03f

This issue was referenced by e2be6bc03fbab9783f117de95d560fbc09442de2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.3 LTS milestone 2023-02-08 15:37:45 +01:00
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:02 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100076
No description provided.