Fix T100076: OBJ import: new importer doesn't use //relative/image/paths

The Python based importer had logic to immediately turn image paths
into relative-to-blender-file paths, if user preference for relative
paths is used (which is on by default). The new importer code did not
have that. Fixes T100076.